RESOLVED FIXED102126
[Blackberry] Break suspend/resume of the backingstore and screen into separate methods
https://bugs.webkit.org/show_bug.cgi?id=102126
Summary [Blackberry] Break suspend/resume of the backingstore and screen into separat...
Adam Treat
Reported 2012-11-13 13:12:50 PST
Modify the suspend/resume methods so that they can be called from the UI thread itself and split up the suspend/resume methods so that we can suspend/resume the screen or backingstore separately.
Attachments
WebKit portion of PR 219976 (36.75 KB, patch)
2012-11-13 13:15 PST, Adam Treat
no flags
WebKit portion of PR 219976 v2 (27.52 KB, patch)
2012-11-14 08:12 PST, Adam Treat
no flags
WebKit portion of PR 219976 v3 (27.52 KB, patch)
2012-11-14 10:18 PST, Adam Treat
no flags
Adam Treat
Comment 1 2012-11-13 13:15:54 PST
Created attachment 173967 [details] WebKit portion of PR 219976 This has already been reviewed internally, but need upstream review.
Antonio Gomes
Comment 2 2012-11-14 06:20:17 PST
Comment on attachment 173967 [details] WebKit portion of PR 219976 View in context: https://bugs.webkit.org/attachment.cgi?id=173967&action=review > Source/WebKit/blackberry/ChangeLog:83 > > [BlackBerry] Add a prompt to enable global location services > https://bugs.webkit.org/show_bug.cgi?id=100992 > - > + > PR 227897 > > Reviewed by Rob Buis. I am not sure commit queue will handle well all this unrelated changelog entries in your diff.
Adam Treat
Comment 3 2012-11-14 07:32:37 PST
(In reply to comment #2) > (From update of attachment 173967 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=173967&action=review > > > Source/WebKit/blackberry/ChangeLog:83 > > > > [BlackBerry] Add a prompt to enable global location services > > https://bugs.webkit.org/show_bug.cgi?id=100992 > > - > > + > > PR 227897 > > > > Reviewed by Rob Buis. > > I am not sure commit queue will handle well all this unrelated changelog entries in your diff. I will get rid of the unnecessary changes to the Changelog, thanks!
Adam Treat
Comment 4 2012-11-14 07:33:29 PST
Comment on attachment 173967 [details] WebKit portion of PR 219976 Get out of review queue since I need to fix the changelog.
Adam Treat
Comment 5 2012-11-14 08:12:33 PST
Created attachment 174161 [details] WebKit portion of PR 219976 v2 Fixed the changelog
Adam Treat
Comment 6 2012-11-14 10:18:06 PST
Created attachment 174192 [details] WebKit portion of PR 219976 v3 New version rebased on latest trunk so that it will apply cleanly.
WebKit Review Bot
Comment 7 2012-11-14 11:03:44 PST
Comment on attachment 174192 [details] WebKit portion of PR 219976 v3 Clearing flags on attachment: 174192 Committed r134630: <http://trac.webkit.org/changeset/134630>
WebKit Review Bot
Comment 8 2012-11-14 11:03:48 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.